skill fix